# clipsy

./: .gitignore  Cargo.toml  LICENSE.md  README.md  clipsy.tmux  devenv.nix  flake.nix
plugin/: clipsy.vim
src/: client.rs  main.rs  msg.rs  server.rs
