[package]
name = "clipsy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "macros"] }
clipboard = "0.5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.114"
tokio-serde-json = "0.3.0"
